cmake_minimum_required(VERSION 3.10)

set(ELYSIAN_RENDERER_VERSION_MAJOR 0)
set(ELYSIAN_RENDERER_VERSION_MINOR 0)
set(ELYSIAN_RENDERER_VERSION_PATCH 1)
set(ELYSIAN_RENDERER_VERSION
  ${ELYSIAN_RENDERER_VERSION_MAJOR}.${ELYSIAN_RENDERER_VERSION_MINOR}.${ELYSIAN_RENDERER_VERSION_PATCH})

project(ElysianRenderer VERSION ${ELYSIAN_RENDERER_VERSION} DESCRIPTION "Elysian Shadows Renderer Framework" LANGUAGES CXX)

enable_testing()

add_subdirectory(lib)
add_subdirectory(test)
